--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                 <img src="images/pick_a_plant/shop.png" class="img-fluid mx-auto d-block rounded" alt="work-img">
                             </div>
                             <div class="work_detail">
-                                <p class="mb-2">Chat</p>
+                                <p class="mb-2">Shop</p>
                                 <h4 class="mb-0">Pick_A_Plant</h4>
                             </div>
                         </div>
@@ -220,7 +220,7 @@
                                 <img src="images/pick_a_plant/cart.png" class="img-fluid mx-auto d-block rounded" alt="work-img">
                             </div>
                             <div class="work_detail">
-                                <p class="mb-2">Chat</p>
+                                <p class="mb-2">Cart</p>
                                 <h4 class="mb-0">Pick_A_Plant</h4>
                             </div>
                         </div>
