--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <h2><span class="fw-bold">About</span> Me</h2>
                         <h4 class="mt-4">Hello! <span class="text-custom fw-bold">I'M James Serrano.</span></h4>
                         <p class="text-muted mt-4">Hi! I'm James Serrano, BSIT Student major in Web Development, Former member of Design Team at Google Developer Student Club, Eager to learn. Data Management Specialist at Grace & Goss Healthcare Management Services.  </p>
-                        <p class="text-muted mt-2">Back End Development is where I am most interested. I always enjoy learning about the certain topic aboud back end development how are things are made and done.</p>
+                        <p class="text-muted mt-2">Back End Development is where I am most interested. I always enjoy learning about the certain topic about back end development how are things are made and done.</p>
                         <p class="text-muted mt-2">I took interest in Computer Hardwares Building Pc, troubleshooting, and component recommendation for the ones who don't know what to pick for their own build.</p>
                         <div>
                             <ul class="mb-0 about-social list-inline mt-4">
