--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
 	                <li class="nav-item">
 	                    <a class="nav-link" href="#skills">Skills</a>
 	                </li>
+			 <li class="nav-item">
+	                    <a class="nav-link" href="valentines.html">Valentin's</a>
+	                </li>   
 	               	 
 	                
 	            </ul>
