--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	                    <a class="nav-link" href="#skills">Skills</a>
 	                </li>
 			 <li class="nav-item">
-	                    <a class="nav-link" href="valentines.html">Valentin's</a>
+	                    <a class="nav-link" href="valentines.html">Valentine's</a>
 	                </li>   
 	               	 
 	                
